@@ -2,15 +2,13 @@ AUX 0001-fix-Makefile-0.3.2.patch 744 SHA256 7efe9ee3cdf0e7e324155d05651f535b39f
 AUX 0001-fix-Makefile-0.4.0.patch 744 SHA256 7efe9ee3cdf0e7e324155d05651f535b39f151adfd8f8bc2ea36eea64e40f1e1 SHA512 2c50e6bb214be622546d9c07f4f39b83d116976dbc9c040a0dd74c70dc8deadf5f6870468fda957b3a4d3df8eda982c3d86612cb8dd7865650cd3fe9202f7b11 WHIRLPOOL a1babc1249f3b48f376163a9ab63a8ca3563da544cf15d04a79fcbb38dcb61679da8304e3eb2afd8a0f1d662be8f3cc144b9cd0928504b197d11b250670d40d3
 AUX gitlab-pages-0.3.2.conf 148 SHA256 2b1d40d38d729a4e705455a2fbe745618c573cdc7159683ebf42f3a28d41a473 SHA512 57ff7ef4f3c5f221e39f8cfd29ab58ccb126d672260ee983d6f1221bfe2cfe5553b4f0187ce384f05fc6694ad31c2f7ae02155d0c21247eccd1d7dbf1632ffba WHIRLPOOL 1cb70bb5a9e6876a58e7cf78a68e9a08a0ae947237a537f7cf93b727cdb69482114cd2c1ccd17e27b80590be11e9904bae81e06afab83066c0d10926d22dd301
 AUX gitlab-pages-0.3.2.init 698 SHA256 6751226148f5c8b53bdf3422053115ed6bb6ac3d7795b605617a7733a2b84437 SHA512 10e299febee0a66f03e8debe3f20ad635b52b5238a2ad23f585d30f14d5c0f591825bd892119f564f427e93a539184e39424c8cdc78200b2dbb5d0f588738176 WHIRLPOOL 7142b6a056a0d0a90bb18d1fdc5995c07156e05216b9e5779548427ad6f7aed4cf8eb090acfcbd0a7cc07826c0b6dfc5276ca176a80783d40405d2011a253fe0
-DIST gitlab-pages-0.3.2.tar.bz2 205531 SHA256 392b0620871ab36a362f8b8b9008c266eda465e6f32611ccbdbe640cd77ae7b5 SHA512 e452af8a9d2032ccba827a7a165abf324008c585369f74d14a47524eaaa3255a92c38f102e8cf63a86012650da6265aa1a28f0ade5131ebb1df51e6202be0edc WHIRLPOOL d47459d214d1ed9818de534885ea806f092fe2fb02b2aa08b00b95fb9c3f2693b7c9b8d3e5723be55535888e1276ba4dbc24ead2f659677a43d326dcff9f3925
 DIST gitlab-pages-0.4.0.tar.bz2 205924 SHA256 b26a00050d3558e793c070cda2fe50dc1bd76ea305902e4885746280755c3ea0 SHA512 9ff1d51655c0af93eca0b3a7e5cf250ce9a6787b3bc5eabcb59207ca3af13b6972bbebbc9c4a05bc1056cd12d6ad4c4bc30700efb656a2b9cfedf71ef57666e2 WHIRLPOOL 064625dfbfd428da5ecbf7ceb0532ff16e61ef9fbdbe1f4f72824e06ca21a93266a3d5eeec730f6423cb9d5d26d99fc6dbb568f30a79c4a691a0fdb08301c1cf
 DIST gitlab-pages-0.4.1.tar.bz2 206039 SHA256 ed856e1d549597b5f1b7aa5d006538aa4def240206b4756728aaeeefa49734c7 SHA512 e6dc7c73ec0601ebe53c54aa8d0978954c24450e488776bef1bb2483efd2db14d23188ee10660f6833f44bbbb50f462f8b9568a77cd4ff970300c604856319a0 WHIRLPOOL c8abfaf677f935b752be24c7ce703c49dcc23061a24f2137ea18df33a96d42233e7e00de120a812df58b84bf3db0739e97a1e37fc04367d370ef2558986d73fa
 DIST gitlab-pages-0.4.2.tar.bz2 209079 SHA256 391301c4f5cc288ed1a6a451e5273899518b83529c787c0a5f724161005ca786 SHA512 74e4cd810712d1506b927f75b63dc4fca09802097579d456cfada94f06c59b05f5e11309dc6fbd0f4c701243933688afa89ef8c1cf921f15536f505c7dec99f4 WHIRLPOOL 0f352db3977565b7c41609dcbed9161fcc99398fc56aa535255a69d12169b75b985410964a9adce60ed9eb8b88a68128dac9a9528f85ec62bae468fb8907e182
 DIST gitlab-pages-0.4.3.tar.bz2 209161 SHA256 d79fd61ac54945596e708ee5b38b35d8cf2ab07f53525af6cec3192e59d7ac98 SHA512 cb1902661f8eba65e8f330d7a57c57fec565db9b046d34af66909920d4f772a418b331f74038a506780d9a4ae6bb2158bbdba684a26020b253bf709b996bbeda WHIRLPOOL 5f0f60ea22071ac740745c60db62041e0ee75a5c68385b2ff5b24ed266fbcaf9a89481b456768159d551525d52b31b25469b9f7c023409b5a2ce05d7026cb327
-EBUILD gitlab-pages-0.3.2-r1.ebuild 1968 SHA256 947c1a842bf512d712a73c723adc9db7651041e740a575050ea636b43948d294 SHA512 c7330aaee4252d6c0bde0440d4dace061e59802459efb3da71148c100e71fe6231bb694a5aaf57e8372d5c8fca2ca84a3d359ce86dcb8c918e12fca92ca22757 WHIRLPOOL 68762bc267f336c0ac866c8e782f878d1ad5dd7066fd85bb0d5ed506b8ea9b57f28a801d6e2535869912b93fa2143f13b0155771b3ee0a31cedd3b64a01169bd
 EBUILD gitlab-pages-0.4.0.ebuild 1944 SHA256 9ea918e126d4edc0fb785eae43f618a7744bd0fb4bd342f09725633b3cbd9f3d SHA512 7b7364e999fbabe7ef48da010ed6b799c9b4af8ee83f32d4b138cc6ac16acdcd5ed980bf217ff405c03a9ef9bf589ce95c3cad64a101d8b0f6eb0d869e0ef014 WHIRLPOOL 2ce6e870eaaf8b7522c1ec7bbf91a843a94a278de77d44bbbe4d74f8ff36aa56dd912eae2e520bac82550a4352c5366098749d7cf1893e5e50be6b708ad1aaa3
 EBUILD gitlab-pages-0.4.1.ebuild 1944 SHA256 f489ea11f220c84e099cff1ce0e960c02498846e90e22de23a3126d4cc9e883d SHA512 18391744f540507bbaee676854ca6b264eb08dcc93fe0a0c6f3bdcc34f3ee505ecb4db7f45f98a7ac2efa722f42f0aab3f174024f5c6a6f7e206fa0e08b6ebee WHIRLPOOL 182e67c00c30485fcb69d1061c397e16e18bfa62a82d729647fd795b36a5ae486a93c5d28f86ceed1b7230f3807732b241bf37532ccae0f789e90fa89ecbfc53
 EBUILD gitlab-pages-0.4.2-r1.ebuild 1434 SHA256 477a4be7f099ed542dc7f69b2008c08d00593225e63a7c652139b4ff1e1feb46 SHA512 88923ff7da8bbb21eca3044bfaf8a59dd9a6fedc96bbeb1739a591ba2054ff1e0d789aeee7b634a70eb1627cfe3ad50361577555ccc5fedb1523e6af3518a4af WHIRLPOOL d94e14712020c5542a5b41c8450a80824fc42d585859a9527812ecb53a452101977f973badce04e2fdb239d87ad465d4ca81a848dbfde67044031b6df0f4a039
 EBUILD gitlab-pages-0.4.3.ebuild 1436 SHA256 5ac00230fb3166541549c0f75cc6cceefba1dc4cdbad00151902f7f5e4d70d94 SHA512 1b764061cdf5c52ad7681e92c330b91a99eee44128fc56c43bdbce291546ee9796ddb2b14ee9deb2dc61c80c4192223cb67c36c2b70833db05ff241d007b870c WHIRLPOOL 168f97a975a81a8413b92a7bd1c8d7420a3f45571ec668600468b43a375e4ea27ef6b95b0d6c5ff7475657920605c990ba6b2012c6c762f868156d6be4163aa5
-MISC ChangeLog 1360 SHA256 fb8abc4ab405d293e3f43f6e83d3778e28eee75deedaf7a30f44f420c4ca4170 SHA512 1759d6c4989f804508abf620d8f73476a7d2898645a5656c12031d63e1c429149994b2203c18e79e973f6a5a44d2ae1d8ee85a76001c78c4ba4111d275e31b9a WHIRLPOOL e54a7f82413472399d0dc8a2d94c3d8d446d7fc54cbf028184ebc537761463d0ccbdcd66da29708c3f1fff0834f46ea9b0cc696f7220eb8f66d8e9892117a5a7
+MISC ChangeLog 1498 SHA256 6973ee175bbb3fd2381bd56aca744eaba0ef74ff895f8486fac0b23a73aa5a9d SHA512 b89e35a418dbc127861db42b3799cd5f82b4e5f6d9e20dac3d58ac307706330c9f77b0a0d60e3eb666ccf181d796dd99f65a5dcd37b0d35e90ec791f130078c9 WHIRLPOOL d1a620bd69ee6b46f87753913b10c6c19804e8507100f7963162ed9fc013a99377bf34988764ea2ce99318bdd6f5a9c34130b0280948cfe393165286572d6dc3
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
