@@ -1,3 +1,7 @@
+  09 Jul 2017; Manuel Friedli <manuel@fritteli.ch>
+  -gitlab-pages-0.3.2-r1.ebuild:
+  www-servers/gitlab-pages:  Purge obsolete versions
+
 *gitlab-pages-0.4.3 (17 Jun 2017)
 
   17 Jun 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-pages-0.4.3.ebuild:
